--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,49 +1,86 @@
+
 .home {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;   
+  min-height: 100vh;         
+  background: #f4f4f4;       
+  padding: 20px;
+}
+
+
+.create_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
 .create_form input {
   width: 300px;
   padding: 10px;
-  border-bottom: 2px solid;
+  border: 2px solid black;
+  border-radius: 6px;
   outline: none;
 }
 
 .create_form button {
-  padding: 10px;
+  padding: 10px 15px;
+  margin-left: 8px;
   background-color: black;
   color: white;
+  border: none;
+  border-radius: 6px;
   cursor: pointer;
+  transition: 0.2s;
 }
+
+.create_form button:hover {
+  background-color: #333;
+}
+
 
 .task {
   display: flex;
   align-items: center;
-  width: 345px;
   justify-content: space-between;
+  width: 345px;
   background-color: black;
   color: white;
-  height: 35px;
-  padding: 2px 5px 2px 5px;
-  margin-top: 2px;
-}
-.checkbox{
-  display:flex;
-  align-items:center;
-}
-.line_through {
-  text-decoration: line-through;
+  border-radius: 6px;
+  padding: 8px 12px;
+  margin-top: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
-.checkbox .icon{
-  margin-right:5px;
-  font-size:15px;
+
+.checkbox {
+  display: flex;
+  align-items: center;
 }
-.task div span{
-  margin:0px 5px 0px 4px
+
+.checkbox .icon {
+  margin-right: 6px;
+  font-size: 16px;
+  cursor: pointer;
 }
-.task div .icon{
-  cursor:pointer;
+
+.line_through {
+  text-decoration: line-through;
+  opacity: 0.7;
+}
+
+.task div span {
+  margin: 0px 6px;
+}
+
+.task div .icon {
+  cursor: pointer;
+  font-size: 16px;
+  transition: 0.2s;
+}
+
+.task div .icon:hover {
+  color: #f39c12; 
 }
